log
Thu 07 Sep 2023 07:02:29 PM UTC: 
 tests:  0|6
total_score: 0/70
03031b0
Thu 07 Sep 2023 07:23:03 PM UTC: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
0718676
Thu 07 Sep 2023 07:26:48 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|6
total_score: 0/70
84a25e2
Thu 07 Sep 2023 07:27:27 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
3ae95ca
Thu 07 Sep 2023 07:27:36 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
3ca0eb4
Thu 07 Sep 2023 07:32:51 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
cb98019
Thu 07 Sep 2023 07:53:02 PM UTC: 
 hashmap.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
 tests:  5|4
total_score: 30/70
3e7f4e8
Thu 07 Sep 2023 10:50:05 PM UTC: 
 hashmap.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  8|3
total_score: 40/70
80d810f
Thu 07 Sep 2023 11:07:53 PM UTC: 
 hashmap.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:92:5: error: ‘posicionn’ undeclared (first use in this function); did you mean ‘posicion’?
   92 |     posicionn=(poscinion+1)%map->capacity;
      |     ^~~~~~~~~
      |     posicion
hashmap.c:92:5: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:92:16: error: ‘poscinion’ undeclared (first use in this function); did you mean ‘posicion’?
   92 |     posicionn=(poscinion+1)%map->capacity;
      |                ^~~~~~~~~
      |                posicion
Compilation failed
5a42773
Thu 07 Sep 2023 11:07:57 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:92:15: error: ‘poscinion’ undeclared (first use in this function); did you mean ‘posicion’?
   92 |     posicion=(poscinion+1)%map->capacity;
      |               ^~~~~~~~~
      |               posicion
hashmap.c:92:15: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
a64d944
Thu 07 Sep 2023 11:08:07 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:92:15: error: ‘pocision’ undeclared (first use in this function); did you mean ‘posicion’?
   92 |     posicion=(pocision+1)%map->capacity;
      |               ^~~~~~~~
      |               posicion
hashmap.c:92:15: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
7cab000
Thu 07 Sep 2023 11:08:13 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|2
total_score: 50/70
31ca9ef
Thu 07 Sep 2023 11:09:02 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:89:18: error: expected ‘;’ before ‘return’
   89 |       map->size--
      |                  ^
      |                  ;
   90 |       return;
      |       ~~~~~~      
Compilation failed
61bc666
